--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundle.razor
@@ -31,6 +31,16 @@
 			</div>
 		</div>
 
+		<div style="display: flex; align-items: center; margin-bottom: 20px;">
+			<div style="width: 15%; padding-right: 20px; text-align: right;">
+				Fecha Termina
+			</div>
+
+			<div style="width: 85%;">
+				<textarea @onchange="(e => TextoCambiaFechaTermina(e))" class="entrada-texto" rows="1">@textoFechaTermina</textarea>
+			</div>
+		</div>
+
 		<div style="display: flex; align-items: center;">
 			<div style="width: 15%; padding-right: 20px; text-align: right;">
 				Juegos
@@ -67,6 +77,7 @@
 		{
 			textoNombre = bundle.NombreBundle;
 			textoFechaEmpieza = bundle.FechaEmpieza.ToString();
+			textoFechaTermina = bundle.FechaTermina.ToString();
 			textoJuegos = JsonConvert.SerializeObject(bundle.Juegos);
 		}
 	}
@@ -101,6 +112,23 @@
 			using (conexion)
 			{
 				BaseDatos.Bundles.Actualizar.FechaEmpieza(bundleId.ToString(), nuevoTexto, conexion);
+			}
+		}
+	}
+
+	private string textoFechaTermina = string.Empty;
+
+	private void TextoCambiaFechaTermina(ChangeEventArgs texto)
+	{
+		if (string.IsNullOrEmpty(texto.Value.ToString().Trim()) == false)
+		{
+			string nuevoTexto = texto.Value.ToString().Trim();
+
+			SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
+			using (conexion)
+			{
+				BaseDatos.Bundles.Actualizar.FechaTermina(bundleId.ToString(), nuevoTexto, conexion);
 			}
 		}
 	}
