--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -659,7 +659,7 @@
 			</div>
 		}
 
-		<div class="perfil" style="display: flex; flex-direction: row; margin-top: 50px;">
+		<div class="perfil" style="display: flex; flex-direction: row; margin-top: 50px; gap: 30px;">
 			<div style="width: 70%;">
 				@if (juego.Media != null)
 				{
@@ -717,7 +717,7 @@
 				}
 			</div>
 
-			<div style="width: 30%; padding-left: 30px;">
+			<div style="width: 30%;">
 				@if (juego.Caracteristicas != null)
 				{
 					@if (juego.Caracteristicas.Descripcion != null)
