--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -350,143 +350,116 @@
 	</div>
 }
 
-@if (renderizado == true)
+@if (noticiasMostrar.Count > 0)
 {
-	@if (noticiasMostrar.Count > 0)
-	{
-		<div style="background-color: var(--fondoOscuro); padding: 30px; margin-bottom: 60px;">
-			<div style="display: flex; overflow: auto; padding-bottom: 20px; gap: 30px; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
-				@foreach (var noticia in noticiasMostrar)
+	<div style="background-color: var(--fondoOscuro); padding: 30px; margin-bottom: 60px;">
+		<div style="display: flex; overflow: auto; padding-bottom: 20px; gap: 30px; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
+			@foreach (var noticia in noticiasMostrar)
+			{
+				string marginExtra = string.Empty;
+
+				if (noticiasMostrar.Count == 1 || noticiasMostrar.Count == 2)
 				{
-					string marginExtra = string.Empty;
+					marginExtra = "margin-left: auto; margin-right: auto;";
+				}
 
-					if (noticiasMostrar.Count == 1 || noticiasMostrar.Count == 2)
-					{
-						marginExtra = "margin-left: auto; margin-right: auto;";
-					}
+				<div class="noticia-ancho" style="float: left; flex: 0 0 auto; @marginExtra">
+					<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@noticia.Id.ToString()')" style="height: 100%;">
+						@{
+							string titulo = Herramientas.Idiomas.MirarTexto(idioma, noticia.TituloEn, noticia.TituloEs);
+						}
 
-					<div class="noticia-ancho" style="float: left; flex: 0 0 auto; @marginExtra">
-						
+						<div id="tooltip-@noticia.Id.ToString()" class="tooltip-relleno" style="padding: 15px; max-width: 400px;">
+							@titulo
+						</div>
 
-						<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@noticia.Id.ToString()')" style="height: 100%;">
-							@{
-								string titulo = Herramientas.Idiomas.MirarTexto(idioma, noticia.TituloEn, noticia.TituloEs);
-							}
-
-							<div id="tooltip-@noticia.Id.ToString()" class="tooltip-relleno" style="padding: 15px; max-width: 400px;">
-								@titulo
-							</div>
-
-							<div @onclick="(e => GestionarNoticia(e, noticia.Enlace, noticia.Id, titulo, noticia.Tipo))" style="height: 100%; cursor: pointer;">
-								<div class="noticia-expandir" style="display: flex; flex-direction: column; color: var(--colorTexto); font-size: 14px; height: 100%; margin: 0 auto;">
-									<div style="display: flex; align-items: center;">
-										@if (usuario != null)
+						<div @onclick="(e => GestionarNoticia(e, noticia.Enlace, noticia.Id, titulo, noticia.Tipo))" style="height: 100%; cursor: pointer;">
+							<div class="noticia-expandir" style="display: flex; flex-direction: column; color: var(--colorTexto); font-size: 14px; height: 100%; margin: 0 auto;">
+								<div style="display: flex; align-items: center;">
+									@if (usuario != null)
+									{
+										if (BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
 										{
-											if (BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
-											{
-												<div style="width: auto;">
-													<a href="/news/@noticia.Id">Editar</a>
-												</div>
-											}
+											<div style="width: auto;">
+												<a href="/news/@noticia.Id">Editar</a>
+											</div>
+										}
+									}
+
+									<div style="background-color: var(--fondoBotonPequeño); padding: 8px 12px; margin-left: auto;">
+										@if (noticia.Tipo == NoticiaTipo.Bundles)
+										{
+											@Herramientas.Idiomas.CogerCadena(idioma, "News1", "Index")
+										}
+										else if (noticia.Tipo == NoticiaTipo.Gratis)
+										{
+											@Herramientas.Idiomas.CogerCadena(idioma, "News2", "Index")
+										}
+										else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+										{
+											@Herramientas.Idiomas.CogerCadena(idioma, "News3", "Index")
+										}
+										else if (noticia.Tipo == NoticiaTipo.Rumores)
+										{
+											@Herramientas.Idiomas.CogerCadena(idioma, "News4", "Index")
+										}
+										else if (noticia.Tipo == NoticiaTipo.Web)
+										{
+											@Herramientas.Idiomas.CogerCadena(idioma, "News5", "Index")
+										}
+										else
+										{
+											@noticia.Tipo
+										}
+									</div>
+								</div>
+
+								<div style="background-color: var(--fondoBotonPequeño); padding: 1px; height: 100%;">
+									<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
+								</div>
+
+								<div style="background-color: var(--fondoBotonPequeño); padding: 10px 12px; display: flex; align-items: center;">
+									@{
+										string icono = string.Empty;
+
+										if (noticia.Tipo == NoticiaTipo.Bundles)
+										{
+											icono = Bundles2.BundlesCargar.DevolverBundle(noticia.BundleTipo).ImagenIcono;
+										}
+										else if (noticia.Tipo == NoticiaTipo.Gratis)
+										{
+											icono = Gratis2.GratisCargar.DevolverGratis(noticia.GratisTipo).ImagenIcono;
+										}
+										else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+										{
+											icono = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(noticia.SuscripcionTipo).ImagenIcono;
 										}
 
-										<div style="background-color: var(--fondoBotonPequeño); padding: 8px 12px; margin-left: auto;">
-											@if (noticia.Tipo == NoticiaTipo.Bundles)
-											{
-												@Herramientas.Idiomas.CogerCadena(idioma, "News1", "Index")
-											}
-											else if (noticia.Tipo == NoticiaTipo.Gratis)
-											{
-												@Herramientas.Idiomas.CogerCadena(idioma, "News2", "Index")
-											}
-											else if (noticia.Tipo == NoticiaTipo.Suscripciones)
-											{
-												@Herramientas.Idiomas.CogerCadena(idioma, "News3", "Index")
-											}
-											else if (noticia.Tipo == NoticiaTipo.Rumores)
-											{
-												@Herramientas.Idiomas.CogerCadena(idioma, "News4", "Index")
-											}
-											else if (noticia.Tipo == NoticiaTipo.Web)
-											{
-												@Herramientas.Idiomas.CogerCadena(idioma, "News5", "Index")
-											}
-											else
-											{
-												@noticia.Tipo
-											}
-										</div>
-									</div>
-
-									<div style="background-color: var(--fondoBotonPequeño); padding: 1px; height: 100%;">
-										<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
-									</div>
-
-									<div style="background-color: var(--fondoBotonPequeño); padding: 10px 12px; display: flex; align-items: center;">
-										@{
-											string icono = string.Empty;
-
-											if (noticia.Tipo == NoticiaTipo.Bundles)
-											{
-												icono = Bundles2.BundlesCargar.DevolverBundle(noticia.BundleTipo).ImagenIcono;
-											}
-											else if (noticia.Tipo == NoticiaTipo.Gratis)
-											{
-												icono = Gratis2.GratisCargar.DevolverGratis(noticia.GratisTipo).ImagenIcono;
-											}
-											else if (noticia.Tipo == NoticiaTipo.Suscripciones)
-											{
-												icono = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(noticia.SuscripcionTipo).ImagenIcono;
-											}
-
-											if (string.IsNullOrEmpty(icono) == false)
-											{
-												<div>
-													<img src="@icono" style="width: 18px; height: 18px; margin-right: 20px;" alt="Store" />
-												</div>
-											}
+										if (string.IsNullOrEmpty(icono) == false)
+										{
+											<div>
+												<img src="@icono" style="width: 18px; height: 18px; margin-right: 20px;" alt="Store" />
+											</div>
 										}
+									}
 
-										<div style="margin-left: auto;">
-											@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
-										</div>
+									<div style="margin-left: auto;">
+										@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>					
-				}
-			</div>
-
-			<div style="display: flex; align-items: center; justify-content: center; margin: 20px auto 0px auto; gap: 60px;">
-				<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px; width: auto;" href="/last-news">
-					@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
-				</a>
-
-				<div>
-					<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
-
-					<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
-						<div style="margin-left: 6px; margin-right: 6px;"><a href="@bluesky" target="_blank"><i class="fa-brands fa-bluesky"></i></a></div>
 					</div>
 				</div>
-			</div>
+			}
 		</div>
-	}
-	else
-	{
-		<div style="background-color: var(--fondoOscuro); padding: 30px; margin-bottom: 60px; max-width: 1000px; margin-left: auto; margin-right: auto; display: flex; align-items: center; justify-content: center; gap: 60px;">
-			<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/last-news">
-				@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsNo", "Index")
+
+		<div style="display: flex; align-items: center; justify-content: center; margin: 20px auto 0px auto; gap: 80px;">
+			<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px; width: auto;" href="/last-news">
+				@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
 			</a>
 
-			<div style="width: 75%; text-align: center;">
+			<div>
 				<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
 
 				<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
@@ -500,12 +473,28 @@
 				</div>
 			</div>
 		</div>
-	}
+	</div>
 }
 else
 {
-	<div style="padding: 40px; margin-left: auto; margin-right: auto; display: flex; justify-content: center;">
-		<label>@Herramientas.Idiomas.CogerCadena(idioma, "Loading", "Index")</label>
+	<div style="background-color: var(--fondoOscuro); padding: 30px; margin-bottom: 60px; max-width: 1000px; margin-left: auto; margin-right: auto; display: flex; align-items: center; justify-content: center; gap: 80px;">
+		<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px; width: auto;" href="/last-news">
+			@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
+		</a>
+
+		<div>
+			<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
+
+			<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
+				<div style="margin-left: 6px; margin-right: 6px;"><a href="@bluesky" target="_blank"><i class="fa-brands fa-bluesky"></i></a></div>
+			</div>
+		</div>
 	</div>
 }
 
@@ -836,8 +825,6 @@ else
 	[Parameter]
 	public string idioma { get; set; }
 
-	private bool renderizado = false;
-
 	private string discord = string.Empty;
 	private string telegram = string.Empty;
 	private string reddit = string.Empty;
@@ -851,7 +838,7 @@ else
 
 	private BaseDatos.Avisos.Aviso aviso = null;
 
-	protected override void OnInitialized()
+	protected override async Task OnInitializedAsync()
 	{
 		WebApplicationBuilder builder = WebApplication.CreateBuilder();
 		discord = builder.Configuration.GetValue<string>("RedesSociales:Discord");
@@ -861,152 +848,144 @@ else
 		steam = builder.Configuration.GetValue<string>("RedesSociales:Steam");
 		rss = Herramientas.Idiomas.CogerRSS(idioma);
 		bluesky = builder.Configuration.GetValue<string>("RedesSociales:Bluesky");
-	}
 
-	protected override async void OnAfterRender(bool primerRender)
-	{
-		if (primerRender == true)
+		usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager);
+
+		if (usuario != null)
 		{
-			renderizado = true;
-
-			usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager);
-
-			if (usuario != null)
+			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
 			{
-				if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-				{
-					usuarioJuegosSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-				}
-
-				#region Filtrado
-
-				if (usuario.IndexOption1 == true)
-				{
-					estadoOcultarJuegosUsuario = "checked";
-				}
-				else
-				{
-					estadoOcultarJuegosUsuario = null;
-				}
-
-				if (string.IsNullOrEmpty(usuario.IndexDRMs) == false)
-				{
-					drms = JsonConvert.DeserializeObject<List<MostrarJuegoDRM>>(usuario.IndexDRMs);
-				}
-
-				if (string.IsNullOrEmpty(usuario.IndexCategories) == false)
-				{
-					categorias = JsonConvert.DeserializeObject<List<MostrarJuegoCategoria>>(usuario.IndexCategories);
-				}
-
-				#endregion
+				usuarioJuegosSteam = Herramientas.Listados.Generar(usuario.SteamGames);
 			}
 
-			//------------------------------------------------
+			#region Filtrado
 
-			SqlConnection conexion = Herramientas.BaseDatos.Conectar();
-
-			using (conexion)
+			if (usuario.IndexOption1 == true)
 			{
-				#region Destacados
+				estadoOcultarJuegosUsuario = "checked";
+			}
+			else
+			{
+				estadoOcultarJuegosUsuario = null;
+			}
 
-				try
+			if (string.IsNullOrEmpty(usuario.IndexDRMs) == false)
+			{
+				drms = JsonConvert.DeserializeObject<List<MostrarJuegoDRM>>(usuario.IndexDRMs);
+			}
+
+			if (string.IsNullOrEmpty(usuario.IndexCategories) == false)
+			{
+				categorias = JsonConvert.DeserializeObject<List<MostrarJuegoCategoria>>(usuario.IndexCategories);
+			}
+
+			#endregion
+		}
+
+		//------------------------------------------------
+
+		SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
+		using (conexion)
+		{
+			#region Destacados
+
+			try
+			{
+				juegosDestacadosCarga = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosDestacados");
+
+				if (juegosDestacadosCarga != null)
 				{
-					juegosDestacadosCarga = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosDestacados");
-
-					if (juegosDestacadosCarga != null)
+					if (juegosDestacadosCarga.Count > 0)
 					{
-						if (juegosDestacadosCarga.Count > 0)
-						{
-							juegosDestacadosGestor = juegosDestacadosCarga;
+						juegosDestacadosGestor = juegosDestacadosCarga;
 
-							CargarJuegosDestacados();
+						CargarJuegosDestacados();
 
-							CronometroDestacados();
-						}
+						CronometroDestacados();
 					}
 				}
-				catch (Exception ex)
+			}
+			catch (Exception ex)
+			{
+				BaseDatos.Errores.Insertar.Ejecutar("Portada", ex, conexion);
+			}
+
+			#endregion
+
+			#region Aviso
+
+			aviso = BaseDatos.Avisos.Buscar.Ejecutar(idioma, conexion);
+
+			#endregion
+
+			#region Minimos
+
+			try
+			{
+				juegosMinimosGestor = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosMinimos");
+			}
+			catch { }
+
+			if (juegosMinimosGestor != null)
+			{
+				if (juegosMinimosGestor.Count > 0)
 				{
-					BaseDatos.Errores.Insertar.Ejecutar("Portada", ex, conexion);
+					Filtros();
 				}
+			}
 
-				#endregion
+			#endregion
 
-				#region Aviso
+			#region Noticias
 
-				aviso = BaseDatos.Avisos.Buscar.Ejecutar(idioma, conexion);
+			try
+			{
+				noticiasGestor = BaseDatos.Noticias.Buscar.Ultimas(conexion, "30");
+			}
+			catch { }
 
-				#endregion
-
-				#region Minimos
-
-				try
+			if (noticiasGestor != null)
+			{
+				if (noticiasGestor.Count > 0)
 				{
-					juegosMinimosGestor = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosMinimos");
-				}
-				catch { }
+					noticiasGestor = noticiasGestor.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
 
-				if (juegosMinimosGestor != null)
-				{
-					if (juegosMinimosGestor.Count > 0)
+					foreach (Noticias.Noticia noticia in noticiasGestor)
 					{
-						Filtros();
-					}
-				}
+						DateTime fechaTemporal = noticia.FechaEmpieza;
+						fechaTemporal = fechaTemporal.AddDays(3);
 
-				#endregion
-
-				#region Noticias
-
-				try
-				{
-					noticiasGestor = BaseDatos.Noticias.Buscar.Ultimas(conexion, "30");
-				}
-				catch { }
-
-				if (noticiasGestor != null)
-				{
-					if (noticiasGestor.Count > 0)
-					{
-						noticiasGestor = noticiasGestor.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
-
-						foreach (Noticias.Noticia noticia in noticiasGestor)
+						if (fechaTemporal > DateTime.Now)
 						{
-							DateTime fechaTemporal = noticia.FechaEmpieza;
-							fechaTemporal = fechaTemporal.AddDays(3);
+							bool añadir = true;
 
-							if (fechaTemporal > DateTime.Now)
+							if (DateTime.Now > noticia.FechaTermina)
 							{
-								bool añadir = true;
+								añadir = false;
+							}
 
-								if (DateTime.Now > noticia.FechaTermina)
+							if (noticiasMostrar.Count > 0)
+							{
+								foreach (var noticiaMostrar in noticiasMostrar)
 								{
-									añadir = false;
-								}
-
-								if (noticiasMostrar.Count > 0)
-								{
-									foreach (var noticiaMostrar in noticiasMostrar)
+									if (noticiaMostrar.Id == noticia.Id)
 									{
-										if (noticiaMostrar.Id == noticia.Id)
-										{
-											añadir = false;
-										}
+										añadir = false;
 									}
 								}
+							}
 
-								if (añadir == true)
-								{
-									noticiasMostrar.Add(noticia);
-								}
+							if (añadir == true)
+							{
+								noticiasMostrar.Add(noticia);
 							}
 						}
 					}
 				}
-
-				#endregion
 			}
+
+			#endregion
 		}
 	}
 
