--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -21,7 +21,7 @@
 	if (modulo == false)
 	{
 		<div style="margin-bottom: 40px; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3; overflow: hidden;">
-			<div class="perfil" style="padding: 20px 40px; display: flex; align-items: center; flex-direction: row;">
+			<div class="perfil" style="padding: 20px 30px; display: flex; align-items: center; flex-direction: row;">
 				<div style="display: flex; align-items: center; flex-direction: row;">
 					<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" style="width: auto;" target="_blank">
 						<div style="height: 60px; padding-left: 20px; padding-right: 20px;">
@@ -41,8 +41,8 @@
 				</div>
 			</div>
 
-			<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" class="boton-pequeño" style="text-align: center; padding: 8px 15px;" target="_blank">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String3")
+			<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" class="boton-pequeño" style="text-align: center; padding: 10px 15px;" target="_blank">
+				@Herramientas.Idiomas.CogerCadena(idioma, "Open", "Bundle")
 			</a>
 		</div>	
 	}
@@ -79,10 +79,52 @@
 							juegosTier = juegosTier.OrderBy(x => x.Nombre).ToList();
 						}
 
-						<div class="perfil" style="font-size: 18px; padding: 20px 40px; margin-bottom: 20px;">
+						foreach (var juego in juegosTier)
+						{
+							if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
+							{
+								if (string.IsNullOrEmpty(juego.Juego.Maestro) == false)
+								{
+									if (juego.Juego.Maestro != "no")
+									{
+										foreach (var juego2 in juegosTier)
+										{
+											if (juego2.JuegoId == juego.Juego.Maestro)
+											{
+												if (juego2.DLCs == null)
+												{
+													juego2.DLCs = new List<string>();
+												}
+
+												bool añadir = true;
+
+												if (juego2.DLCs.Count > 0)
+												{
+													foreach (var dlc in juego2.DLCs)
+													{
+														if (dlc == juego.JuegoId)
+														{
+															añadir = false;
+															break;
+														}
+													}
+												}
+
+												if (añadir == true)
+												{
+													juego2.DLCs.Add(juego.JuegoId);
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+
+						<div class="perfil" style="padding: 30px; margin-bottom: 20px;">
 							@if (bundle.Pick == true)
 							{
-								<div style="display: flex; align-items: center; width: 100%; flex-direction: row; font-size: 18px; padding-top: 10px;">
+								<div style="display: flex; align-items: center; width: 100%; flex-direction: row; padding-bottom: 10px;">
 									@foreach (var tier2 in OrdenarTiers(bundle.Tiers))
 									{
 										<div style="width: 100%; text-align: center;">
@@ -98,11 +140,11 @@
 									}
 								</div>
 
-								<hr style="margin: 30px 0px;" />
+								<hr/>
 							}
 							else
 							{
-								<div style="font-size: 18px; padding-top: 10px;">
+								<div style="font-size: 18px;">
 									<div style="margin-bottom: 5px;">
 										Tier @tier.Posicion: @ArreglarPrecio(decimal.Parse(tier.Precio))
 									</div>
@@ -128,81 +170,125 @@
 									</div>
 								</div>
 
-								<hr style="margin: 30px 0px;" />
+								<hr/>
 							}
 
-							<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; padding-bottom: 20px; grid-gap: 30px;">
+							<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; grid-gap: 30px; margin-top: 10px;">
 								@foreach (var juego in juegosTier)
 								{
-									bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
-									bool usuarioTieneDeseado = false;
+									bool mostrar = true;
 
-									string fondoColor = string.Empty;
-
-									if (usuarioTieneJuego == true)
+									if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
 									{
-										fondoColor = "background-color: var(--fondoBien);";
-									}
-									else
-									{
-										usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
-
-										if (usuarioTieneDeseado == true)
+										if (string.IsNullOrEmpty(juego.Juego.Maestro) == false)
 										{
-											fondoColor = "background-color: var(--fondoAlerta);";
+											if (juego.Juego.Maestro != "no")
+											{
+												foreach (var juego2 in juegosTier)
+												{
+													if (juego2.JuegoId == juego.Juego.Maestro)
+													{
+														mostrar = false;
+													}
+												}
+											}
 										}
 									}
 
-									bool usuarioConectado = false;
-
-									if (usuario != null)
+									if (mostrar == true)
 									{
-										usuarioConectado = true;
-									}
+										bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
+										bool usuarioTieneDeseado = false;
 
-									<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
-										<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno" style="max-width: 460px; padding: 10px; font-size: 14px;">
-											@Herramientas.Idiomas.CogerCadena(idioma, "Expanded9", "Bundle")
-										</div>
+										string fondoColor = string.Empty;
 
-										<button @onclick="(e => AbrirJuego(e, juego.Juego, Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado)))" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
-											<div style="padding: 2px;">
-												<div style="text-align: center;">
-													<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
-												</div>
+										if (usuarioTieneJuego == true)
+										{
+											fondoColor = "background-color: var(--fondoBien);";
+										}
+										else
+										{
+											usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
 
-												<div style="padding: 15px; text-align: left;">
+											if (usuarioTieneDeseado == true)
+											{
+												fondoColor = "background-color: var(--fondoAlerta);";
+											}
+										}
+
+										bool usuarioConectado = false;
+
+										if (usuario != null)
+										{
+											usuarioConectado = true;
+										}
+
+										<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
+											<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno" style="max-width: 460px; padding: 10px; font-size: 14px;">
+												<div>@Herramientas.Idiomas.CogerCadena(idioma, "Tooltip", "Bundle")</div>
+
+												<div style="margin-top: 5px;">@Herramientas.Idiomas.CogerCadena(idioma, "Tooltip2", "Bundle")</div>
+											</div>
+
+											@{
+												List<string> dlcs = new List<string>();
+
+												if (juego.DLCs != null)
+												{
+													if (juego.DLCs.Count > 0)
+													{
+														dlcs = juego.DLCs;
+													}
+												}
+											}
+
+											<button @onclick="(e => AbrirJuego(e, juego.Juego, dlcs, Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado)))" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
+												<div style="padding: 0px;">
+													<div style="text-align: center;">
+														<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
+													</div>
+
 													<div style="display: flex; align-items: center;">
-														<div>
+														<div style="display: flex; align-items: center; gap: 15px; padding: 15px; width: 100%;">
 															<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
+
+															@if (juego.Juego.PrecioMinimosHistoricos != null)
+															{
+																foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
+																{
+																	if (historico.DRM == juego.DRM)
+																	{
+																		<div style="text-align: center; font-size: 14px;">
+																			@Herramientas.Idiomas.CogerCadena(idioma, "Game1", "Bundle"): @ArreglarPrecio(historico.Precio)
+																		</div>
+
+																		break;
+																	}
+																}
+															}	
 														</div>
 
-														@if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
+														@if (juego.DLCs != null)
 														{
-															<div style="margin-left: 15px; font-size: 14px; background: var(--fondoDlc);">
-																<span style="padding: 4px 6px; line-height: 24px; vertical-align: middle;">@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String15")</span>
-															</div>
-														}
-
-														@if (juego.Juego.PrecioMinimosHistoricos != null)
-														{
-															foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
+															if (juego.DLCs.Count > 0)
 															{
-																if (historico.DRM == juego.DRM)
-																{
-																	<div style="margin-left: 20px; text-align: center; font-size: 14px;">
-																		@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String9"): @ArreglarPrecio(historico.Precio)
-																	</div>
-
-																	break;
-																}
+																<div style="background-color: var(--fondoDlc); font-size: 14px; padding: 15px 10px; width: 42%;">
+																	@if (juego.DLCs.Count == 1)
+																	{
+																		@("+" + Herramientas.Idiomas.CogerCadena(idioma, "DLCs1", "Bundle"))
+																	}
+																	else if (juego.DLCs.Count > 1)
+																	{
+																		@string.Format("+ " + Herramientas.Idiomas.CogerCadena(idioma, "DLCs2", "Bundle"), juego.DLCs.Count)
+																	}
+																</div>
 															}
 														}
 													</div>
 												</div>
-											</div>
-										</button>
-									</div>
+											</button>
+										</div>
+									}		
 								}
 							</div>
 						</div>
@@ -366,8 +452,41 @@
 						{
 							<hr />
 
-							<div style="text-align: left; margin-top: 15px;">
+							<div style="text-align: left;">
 								@Herramientas.Idiomas.CogerCadena(idioma, "Expanded8", "Bundle")
+							</div>
+						}
+					}
+
+					@if (dlcsExpandido != null)
+					{
+						if (dlcsExpandido.Count > 0)
+						{
+							<hr />
+
+							<div style="text-align: left;">
+								<div>
+									@if (dlcsExpandido.Count == 1)
+									{
+										@Herramientas.Idiomas.CogerCadena(idioma, "Expanded9", "Bundle")
+									}
+									else if (dlcsExpandido.Count > 1)
+									{
+										@Herramientas.Idiomas.CogerCadena(idioma, "Expanded10", "Bundle")
+									}
+								</div>
+
+								@foreach (var dlc in dlcsExpandido)
+								{
+									Juegos.Juego dlc2 = BaseDatos.Juegos.Buscar.UnJuego(dlc);
+
+									@if (dlc2 != null)
+									{
+										<div style="margin-top: 5px;">
+											• <a href="/game/@dlc2.Id/@Herramientas.EnlaceAdaptador.Nombre(dlc2.Nombre)/" target="_blank">@dlc2.Nombre</a>
+										</div>	
+									}
+								}
 							</div>
 						}
 					}
@@ -472,17 +591,19 @@
 	private bool mostrarJuegoDetalles = false;
 	private Herramientas.ToolTipDatos datosExpandidos = new Herramientas.ToolTipDatos();
 	private Juegos.Juego juegoExpandido = new Juegos.Juego();
+	private List<string> dlcsExpandido = new List<string>();
 
 	private void CerrarJuego(MouseEventArgs e)
 	{
 		mostrarJuegoDetalles = false;
 	}
 
-	private void AbrirJuego(MouseEventArgs e, Juegos.Juego juego, Herramientas.ToolTipDatos datos)
+	private void AbrirJuego(MouseEventArgs e, Juegos.Juego juego, List<string> dlcs, Herramientas.ToolTipDatos datos)
 	{
 		mostrarJuegoDetalles = true;
 
 		juegoExpandido = juego;
+		dlcsExpandido = dlcs;
 		datosExpandidos = datos;
 	}
 
