--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -102,7 +102,8 @@
     </header>
 
     <main role="main" class="cuerpo-ancho cuerpo-espacio">
-        @(await Html.RenderComponentAsync<Componentes.Admin.Tareas>(RenderMode.ServerPrerendered))
+        @(await Html.RenderComponentAsync<Componentes.Tareas.Minimos>(RenderMode.ServerPrerendered))
+        @(await Html.RenderComponentAsync<Componentes.Tareas.Tiendas>(RenderMode.ServerPrerendered))
 
         @RenderBody()
     </main>
