--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
@@ -184,7 +184,7 @@
 
 			using (conexion)
 			{
-				BaseDatos.Noticias.Actualizar.ContenidoEs(noticiaId.ToString(), nuevoTexto, conexion);
+				BaseDatos.Noticias.Actualizar.ContenidoEn(noticiaId.ToString(), nuevoTexto, conexion);
 			}
 		}
 	}
